--- a/css/general.css
+++ b/css/general.css
@@ -126,7 +126,7 @@ input:not([type]) {
 }
 
 select {
-  -webkit-appearance: none;
+  /* -webkit-appearance: none; */
   padding: 0.5rem;
   font-size: 1rem;
   border: 2px solid var(--input-border-color);
